[bmalloc] ChunkHash is not used since r261667 https://bugs.webkit.org/show_bug.cgi?id=230762

Reviewed by Alex Christensen.

The structure is the leftover when ObjectTypeTable was introduced at r261667.

* bmalloc/Chunk.h:


Canonical link: https://commits.webkit.org/242312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283285 268f45cc-cd09-0410-ab3c-d52691b4dbfc